@@ -818,67 +818,6 @@ export class Spectoda {
 
   //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-  //! this should be moved to a parser class
-  async preprocessTngl(tngl_code) {
-    logging.verbose(`preprocessTngl(tngl_code=${tngl_code})`);
-
-    // 1st stage: preprocess the code
-
-    let processed_tngl_code = tngl_code;
-
-    const regexPUBLISH_TNGL_TO_API = /PUBLISH_TNGL_TO_API\s*\(\s*"([^"]*)"\s*,\s*`([^`]*)`\s*\);?/ms;
-    const regexINJECT_TNGL_FROM_API = /INJECT_TNGL_FROM_API\s*\(\s*"([^"]*)"\s*\);?/ms;
-
-    for (let requests = 0; requests < 64; requests++) {
-      const match = regexPUBLISH_TNGL_TO_API.exec(processed_tngl_code);
-      if (!match) {
-        break;
-      }
-
-      logging.verbose(match);
-
-      const name = match[1];
-      const id = encodeURIComponent(name);
-      const tngl = match[2];
-
-      try {
-        logging.verbose(`sendTnglToApi({ id=${id}, name=${name}, tngl=${tngl} })`);
-        await sendTnglToApi({ id, name, tngl });
-        processed_tngl_code = processed_tngl_code.replace(match[0], "");
-      } catch (e) {
-        logging.error(`Failed to send "${name}" to TNGL API`);
-        throw "SendTnglToApiFailed";
-      }
-    }
-
-    for (let requests = 0; requests < 64; requests++) {
-      const match = regexINJECT_TNGL_FROM_API.exec(processed_tngl_code);
-      if (!match) {
-        break;
-      }
-
-      logging.verbose(match);
-
-      const name = match[1];
-      const id = encodeURIComponent(name);
-
-      try {
-        logging.verbose(`fetchTnglFromApiById({ id=${id} })`);
-        const response = await fetchTnglFromApiById(id);
-        processed_tngl_code = processed_tngl_code.replace(match[0], response.tngl);
-      } catch (e) {
-        logging.error(`Failed to fetch "${name}" from TNGL API`);
-        throw "FetchTnglFromApiFailed";
-      }
-    }
-
-    // var code = `// Publishing TNGL as "${text_tngl_api_name}":\n/*\n${statements_body}*/\n`;
-    // var code = `// Loaded TNGL "${text_tngl_api_name}": \n ${tnglCodeToInject}\n`;
-
-    logging.debug(processed_tngl_code);
-
-    return processed_tngl_code;
-  }
 
   /**
    * Function role changed!
